--- a/jd_style.css
+++ b/jd_style.css
@@ -1,20 +1,20 @@
 /*
- * This file is part of SQLDatabaseAPI (2012).
+ * This file is part of SAM (2012).
  *
- * SQLDatabaseAPI is free software: you can redistribute it and/or modify
+ * SAM is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
- * SQLDatabaseAPI is distributed in the hope that it will be useful,
+ * SAM is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
- * along with SQLDatabaseAPI.  If not, see <http://www.gnu.org/licenses/>.
+ * along with SAM.  If not, see <http://www.gnu.org/licenses/>.
  *
- * Last modified: 05.02.13 16:45
+ * Last modified: 15.05.13 17:54
  */
 
 /* Javadoc style sheet */
